metadata/objects/wide_nofragment__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox101__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox101</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox102__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox102</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextArea490__c</fullName>
        <label>LongTextArea490</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea491__c</fullName>
        <label>LongTextArea491</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea492__c</fullName>
        <label>LongTextArea492</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number245__c</fullName>
        <label>Number245</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number246__c</fullName>
        <label>Number246</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number247__c</fullName>
        <label>Number247</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>wide_nofragment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>wide_nofragment-{0000000}</displayFormat>
        <label>wide_nofragment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>wide_nofragments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>